--- a/paso7.html
+++ b/paso7.html
@@ -50,8 +50,8 @@
         <br />
 
         <div class="ms-row-flex ms-row-justify-end">
-            <a href="paso6.html" class="button-tradicional">Seguir buscando</a>
-            <a href="index.html" class="button-tradicional-2" style="margin-left: 15px;">Confirmar agendamiento</a>
+            <a href="paso6.html" class="button-tradicional btn-xs-full">Seguir buscando</a>
+            <a href="index.html" class="button-tradicional-2 btn-xs-full" style="margin-left: 15px;">Confirmar agendamiento</a>
         </div>
 
     </div>
